--- a/res/fxml/MainView.fxml
+++ b/res/fxml/MainView.fxml
@@ -11,7 +11,7 @@
             fx:controller="com.edenrump.controllers.MainViewController">
     <center>
         <VBox styleClass="background-pane" spacing="10" fx:id="dragTarget">
-            <HBox alignment="BASELINE_LEFT">
+            <HBox alignment="CENTER">
                 <padding>
                     <Insets left="5" right="5"/>
                 </padding>
@@ -19,15 +19,17 @@
                     <Button fx:id="fileButton" styleClass="file-button" onAction="#openFile"/>
                     <Button styleClass="email-button"/>
                 </HBox>
+                <Label styleClass="title-text" text="Outlook Metrics"/>
                 <HBox spacing="10" id="right-icons" HBox.hgrow="ALWAYS" alignment="CENTER_RIGHT">
                     <Button styleClass="settings-button"/>
-                    <Button styleClass="git-button"/>
+                    <Button styleClass="git-button" onAction="#launchGithubWebsite"/>
                     <Button styleClass="exit-button" onAction="#exit"/>
                 </HBox>
             </HBox>
             <StackPane VBox.vgrow="ALWAYS">
-                <VBox alignment="CENTER" styleClass="content-frame">
-                    <Label layoutX="54.0" layoutY="92.0" text="Drop Files Here :)"/>
+                <VBox alignment="CENTER" styleClass="pre-content-frame">
+                    <Label styleClass="title-text" text="Drop Calendar Export CSV"/>
+                    <Label styleClass="title-text" text="to Load Metrics..."/>
                 </VBox>
             </StackPane>
         </VBox>
