add file validation animation

--- a/res/css/application.css
+++ b/res/css/application.css
@@ -9,7 +9,7 @@
    -fx-padding: 10px;
 }
 
-.pre-content-frame{
+.pre-content-pane{
    -fx-background-color: #ffffff22;
    -fx-background-radius: 10px;
 }
