--- a/res/fxml/MainView.fxml
+++ b/res/fxml/MainView.fxml
@@ -28,9 +28,13 @@
                 </HBox>
             </HBox>
             <StackPane VBox.vgrow="ALWAYS" onMouseClicked="#handleContentPaneClicked">
-                <VBox fx:id="contentPane" alignment="CENTER" styleClass="pre-content-pane">
-                    <Label styleClass="title-text" text="Drop Calendar Export CSV"/>
-                    <Label styleClass="title-text" text="to Load Metrics..."/>
+                <Label fx:id="statusLabel" styleClass="title-text" text="Drop Calendar Export CSV to Load Metrics..."/>
+                <VBox fx:id="contentPane" spacing="10" alignment="CENTER" styleClass="pre-content-pane">
+                </VBox>
+                <VBox fx:id="messagePane" spacing="10" alignment="BOTTOM_RIGHT">
+                    <padding>
+                        <Insets topRightBottomLeft="25"/>
+                    </padding>
                 </VBox>
             </StackPane>
         </VBox>
