--- a/res/fxml/MainView.fxml
+++ b/res/fxml/MainView.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.layout.*?>
 
 <?import javafx.geometry.Insets?>
+<?import com.edenrump.ui.ToastContainer?>
 <BorderPane xmlns="http://javafx.com/javafx/10.0.2-internal" stylesheets="@../css/application.css"
             styleClass="shadow-pane"
             xmlns:fx="http://javafx.com/fxml/1"
@@ -27,15 +28,7 @@
                     <Button styleClass="exit-button" onAction="#handleExitButtonClicked"/>
                 </HBox>
             </HBox>
-            <StackPane VBox.vgrow="ALWAYS" onMouseClicked="#handleContentPaneClicked">
-                <Label fx:id="statusLabel" styleClass="title-text" text="Drop Calendar Export CSV to Load Metrics..."/>
-                <VBox fx:id="contentPane" spacing="10" alignment="CENTER" styleClass="pre-content-pane">
-                </VBox>
-                <VBox fx:id="messagePane" spacing="10" alignment="BOTTOM_RIGHT">
-                    <padding>
-                        <Insets topRightBottomLeft="25"/>
-                    </padding>
-                </VBox>
+            <StackPane fx:id="contentContainer" VBox.vgrow="ALWAYS" onMouseClicked="#handleContentPaneClicked">
             </StackPane>
         </VBox>
     </center>
