--- a/res/fxml/MainView.fxml
+++ b/res/fxml/MainView.fxml
@@ -1,35 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<?import javafx.geometry.Insets?>
-<?import com.edenrump.ui.ToastContainer?>
-<BorderPane xmlns="http://javafx.com/javafx/10.0.2-internal" stylesheets="@../css/application.css"
-            styleClass="shadow-pane"
-            xmlns:fx="http://javafx.com/fxml/1"
-            prefHeight="500.0" prefWidth="800.0"
-            fx:controller="com.edenrump.controllers.MainViewController">
+<BorderPane prefHeight="700.0" prefWidth="500.0" styleClass="shadow-pane" stylesheets="@../css/application.css" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.edenrump.controllers.MainViewController">
     <center>
-        <VBox styleClass="background-pane" spacing="10" fx:id="dragTarget">
+        <VBox fx:id="dragTarget" spacing="10" styleClass="background-pane">
             <HBox alignment="CENTER">
                 <padding>
-                    <Insets left="5" right="5"/>
+                    <Insets left="5" right="5" />
                 </padding>
-                <HBox spacing="10" id="left-icons" HBox.hgrow="ALWAYS" alignment="CENTER_LEFT">
-                    <Button fx:id="fileButton" styleClass="file-button" onAction="#handleOpenFileButtonClicked"/>
-                    <Button styleClass="email-button"/>
-                    <Button styleClass="image-button" onAction="#handleSaveImageButtonClicked"/>
+                <HBox id="left-icons" alignment="CENTER_LEFT" spacing="10" HBox.hgrow="ALWAYS">
+                    <Button fx:id="fileButton" onAction="#handleOpenFileButtonClicked" styleClass="file-button" />
+                    <Button styleClass="email-button" />
+                    <Button onAction="#handleSaveImageButtonClicked" styleClass="image-button" />
                 </HBox>
-                <Label styleClass="title-text" text="Outlook Metrics"/>
-                <HBox spacing="10" id="right-icons" HBox.hgrow="ALWAYS" alignment="CENTER_RIGHT">
-                    <Button styleClass="settings-button"/>
-                    <Button styleClass="git-button" onAction="#handleLaunchGithubWebsiteButtonClicked"/>
-                    <Button styleClass="exit-button" onAction="#handleExitButtonClicked"/>
+                <Label styleClass="title-text" text="Outlook Metrics" />
+                <HBox id="right-icons" alignment="CENTER_RIGHT" spacing="10" HBox.hgrow="ALWAYS">
+                    <Button styleClass="settings-button" />
+                    <Button onAction="#handleLaunchGithubWebsiteButtonClicked" styleClass="git-button" />
+                    <Button onAction="#handleExitButtonClicked" styleClass="exit-button" />
                 </HBox>
             </HBox>
-            <StackPane fx:id="contentContainer" VBox.vgrow="ALWAYS" onMouseClicked="#handleContentPaneClicked">
+         <ScrollPane onMouseClicked="#handleContentPaneClicked" styleClass="transparent-background" fitToWidth="true" fitToHeight="true" VBox.vgrow="ALWAYS">
+            <content>
+                  <StackPane fx:id="contentContainer" >
             </StackPane>
+            </content>
+         </ScrollPane>
         </VBox>
     </center>
 </BorderPane>
